--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ header {
 }
 
 button {
-  padding: 16px 24px; /*Espaçamento das laterais, cima e baixo */
-  border-radius: 8px; /*Arredondamento da borda*/
-  border: 1px solid #8b5cf6; /*Cor e definições da borda*/
-  background-color: transparent; /*Cor do fundo*/
-  color: white; /*Cor da Escrita*/
+  padding: 16px 24px; 
+  border-radius: 8px; 
+  border: 1px solid #8b5cf6; 
+  background-color: transparent; 
+  color: white; 
 
   display: flex;
   align-items: center;
@@ -78,7 +78,7 @@ button {
 }
 
 .day div {
-  /*Pega todas as divs dentro de day*/
+  
 
   margin-bottom: 8px;
 
@@ -93,7 +93,7 @@ button {
 
 input {
   appearance: none;
-  -webkit-appearance: none; /*Mesma coisa que o apperance mas certos navegadores só entendem assim*/
+  -webkit-appearance: none; 
 
   width: 64px;
   height: 64px;
@@ -104,7 +104,6 @@ input {
   background: #18181b;
 }
 
-/*pseudo-selector*/
 input:checked {
   background: #8b5cf6;
   border: 2px solid #a78bfa;
@@ -112,6 +111,6 @@ input:checked {
 
 @media (max-width: 570px) {
   button div {
-    display: none; /*Para aparecer só o botão e não o texto de 0 até 570px*/
+    display: none; 
   }
 }
